<resources>
    <string name="app_name">Calcu02</string>
    <string name="reset1">contentDescription</string>
    <string name="button1">contentDescription</string>
    <string name="button2">contentDescription</string>
    <string name="button3">contentDescription</string>
    <string name="button4">contentDescription</string>
    <string name="button5">contentDescription</string>
    <string name="button6">contentDescription</string>
    <string name="button7">contentDescription</string>
    <string name="button8">contentDescription</string>
    <string name="button9">contentDescription</string>
    <string name="plus">contentDescription</string>
    <string name="button11">contentDescription</string>
    <string name="minus">contentDescription</string>
    <string name="multiply">contentDescription</string>
    <string name="result">contentDescription</string>
    <string name="division">contentDescription</string>
</resources>
