<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#e22525">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fffefe"
        android:layout_weight="1">


        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="2" />


        <ImageButton
            android:src="@drawable/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:layout_weight="1"
            android:contentDescription="@string/reset1" />





    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dd2323"
        android:layout_weight="1">


        <ImageButton
            android:src="@drawable/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:layout_weight="1"
            android:contentDescription="@string/button1" />


        <ImageButton
            android:src="@drawable/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:contentDescription="@string/button2" />




        <ImageButton
            android:src="@drawable/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:contentDescription="@string/button3"/>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <ImageButton
            android:src="@drawable/b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:contentDescription="@string/button4"/>


        <ImageButton
            android:src="@drawable/b5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:contentDescription="@string/button5"/>



        <ImageButton
            android:src="@drawable/b6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:contentDescription="@string/button6"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <ImageButton
            android:src="@drawable/b7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:layout_weight="1"
            android:contentDescription="@string/button7"/>


        <ImageButton
            android:src="@drawable/b8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:layout_weight="1"
            android:contentDescription="@string/button8"/>


        <ImageButton
            android:src="@drawable/b9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:layout_weight="1"
            android:contentDescription="@string/button9" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <ImageButton
            android:src="@drawable/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus"
            android:layout_weight="1"
            android:contentDescription="@string/plus"/>


        <ImageButton
            android:src="@drawable/b0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11"
            android:layout_weight="1"
            android:contentDescription="@string/button11"/>


        <ImageButton
            android:src="@drawable/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus"
            android:layout_weight="1"
            android:contentDescription="@string/minus" />


    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <ImageButton
            android:src="@drawable/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiply"
            android:layout_weight="1"
            android:contentDescription="@string/multiply"/>


        <ImageButton
            android:src="@drawable/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:layout_weight="1"
            android:contentDescription="@string/result" />


        <ImageButton
            android:src="@drawable/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/division"
            android:layout_weight="1"
            android:contentDescription="@string/division" />

    </TableRow>


</TableLayout>